[project]
name = "fastq-purge"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Federico Agostini", email = "federico.agostini@scilifelab.se" }
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "dnaio>=1.2.3",
    "loky>=3.5.3",
    "maturin>=1.8.3",
    "multiprocess>=0.70.18",
    "psutil>=7.0.0",
    "rbloom>=1.5.2",
    "rich>=14.0.0",
    "rich-argparse>=1.7.0",
]

[project.scripts]
fastq-purge = "fastq_purge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
